fixed pagination dots color

--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -270,6 +270,7 @@ body.modal-open {
 
 .modal__location-link {
   color: $light-theme-main-text-color;
+  display: inline-flex;
 }
 
 .modal__location-link:hover {
